--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,9 @@
+@media (min-width:600px) and(max-width:760px){
+body{
+    background-color: bisque;
+}
+}
+
 .box{
     background-image: url(./image.jpg);
     background-size: cover;
